--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-contenteditable": "^3.3.5",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-scripts": "4.0.3",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
     "react-speech-recognition": "^3.8.0",
     "web-vitals": "^1.0.1"
   },
